Aspose.Tasks Implemented

--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "Aspose Cloud SDK for NodeJS",
-  "version": "0.1.0",
+  "name": "asposecloud",
+  "version": "1.0.2",
   "description": "Aspose Cloud SDK for NodeJS",
   "main": "lib/aspose-cloud.js",
   "scripts": {
     "test": "echo \"Error: no test specified! Configure in package.json\" && exit 1"
   },
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/asposemarketplace/Aspose_for_Node.js.git"
+  },
   "keywords": [
     "Aspose",
     "Cloud",
@@ -14,9 +17,11 @@
     "Storage",
     "Words",
     "Worksheet",
-    "Slides"
+    "Slides",
+    "Emails",
+    "Tasks"
   ],
-  "author": "Assad Mahmood Qazi",
+  "author": "Assad Mahmood Qazi <assadvirgo@gmail.com>",
   "license": "MIT",
   "readmeFilename": "README.md"
 }
